src/test/test-models/bad/err-var-decl-after-statement.stan
transformed data {
  real y;
  y <- 3;
  real z;
  z <- 3;
}
model {
}
